# codetr

./: README.md  main.py  pyproject.toml  test_model_loading.py
codetr/: __init__.py  configs.py
codetr/models/: co_dino_head.py  co_dino_inst.py  co_dino_transformer.py  deformable_attention.py  mask_head.py  position_encoding.py  rope.py  sfp_neck.py  vit_backbone.py
codetr/utils/: load_weights.py
